--- a/portal-frontend/src/app/features/applications/edit-submission/proposal/excl-proposal/excl-proposal.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/proposal/excl-proposal/excl-proposal.component.html
@@ -78,8 +78,8 @@
     <div class="full-row">
       <label for="purpose">What is the purpose of the proposal?</label>
       <div class="subtext">
-        Include why you are applying for an exclusion, what the proposal will achieve, and any benefits to agriculture that
-        the proposal provides.
+        Include why you are applying for an exclusion, what the proposal will achieve, and any benefits to agriculture
+        that the proposal provides.
       </div>
       <mat-form-field appearance="outline">
         <textarea
@@ -121,11 +121,12 @@
       <app-file-drag-drop
         id="proposal-map"
         [uploadedFiles]="proposalMap"
-        (uploadFiles)="attachFile($event, DOCUMENT.PROPOSAL_MAP)"
+        (uploadFiles)="attachProposalMap($event)"
         (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
+        [showVirusError]="showProposalMapVirus"
       ></app-file-drag-drop>
     </div>
   </div>
@@ -155,12 +156,13 @@
         <app-file-drag-drop
           id="advertising"
           [uploadedFiles]="noticeOfPublicHearing"
-          (uploadFiles)="attachFile($event, DOCUMENT.PROOF_OF_ADVERTISING)"
+          (uploadFiles)="attachProofOfAdvertising($event)"
           (deleteFile)="onDeleteFile($event)"
           (openFile)="openFile($event)"
           [showErrors]="showErrors"
           [allowMultiple]="true"
           [isRequired]="true"
+          [showVirusError]="showProofOfAdvertisingVirus"
         ></app-file-drag-drop>
       </div>
       <div class="full-row">
@@ -172,12 +174,13 @@
         <app-file-drag-drop
           id="signage"
           [uploadedFiles]="proofOfSignage"
-          (uploadFiles)="attachFile($event, DOCUMENT.PROOF_OF_SIGNAGE)"
+          (uploadFiles)="attachProofOfSignage($event)"
           (deleteFile)="onDeleteFile($event)"
           (openFile)="openFile($event)"
           [showErrors]="showErrors"
           [isRequired]="true"
           [allowMultiple]="true"
+          [showVirusError]="showProofOfSignageVirus"
         ></app-file-drag-drop>
       </div>
       <div class="full-row">
@@ -186,12 +189,13 @@
         <app-file-drag-drop
           id="report"
           [uploadedFiles]="reportOfPublicHearing"
-          (uploadFiles)="attachFile($event, DOCUMENT.REPORT_OF_PUBLIC_HEARING)"
+          (uploadFiles)="attachReportOfPublicHearing($event)"
           (deleteFile)="onDeleteFile($event)"
           (openFile)="openFile($event)"
           [showErrors]="showErrors"
           [isRequired]="true"
           [allowMultiple]="true"
+          [showVirusError]="showReportOfPublicHearingVirus"
         ></app-file-drag-drop>
       </div>
     </div>
