--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/parcels/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/parcels/parcel-entry/parcel-entry.component.html
@@ -200,6 +200,7 @@
       (beforeFileUploadOpened)="beforeFileUploadOpened()"
       [showErrors]="showErrors"
       [isRequired]="isCertificateOfTitleRequired"
+      [showVirusError]="showVirusError"
     ></app-file-drag-drop>
   </div>
 
