--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/proposal/roso/roso-proposal.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/proposal/roso/roso-proposal.component.html
@@ -190,11 +190,12 @@
       <app-file-drag-drop
         id="proposal-map"
         [uploadedFiles]="proposalMap"
-        (uploadFiles)="attachFile($event, DOCUMENT.PROPOSAL_MAP)"
+        (uploadFiles)="attachProposalMap($event)"
         (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
+        [showVirusError]="showProposalMapVirus"
       ></app-file-drag-drop>
     </div>
 
@@ -238,13 +239,14 @@
       <app-file-drag-drop
         id="cross-section"
         [uploadedFiles]="crossSections"
-        (uploadFiles)="attachFile($event, DOCUMENT.CROSS_SECTIONS)"
+        (uploadFiles)="attachCrossSection($event)"
         (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
         [allowMultiple]="true"
         [disabled]="!allowMiningUploads"
+        [showVirusError]="showCrossSectionVirus"
       ></app-file-drag-drop>
     </div>
     <div class="full-row">
@@ -259,13 +261,14 @@
       <app-file-drag-drop
         id="reclamation-plan"
         [uploadedFiles]="reclamationPlan"
-        (uploadFiles)="attachFile($event, DOCUMENT.RECLAMATION_PLAN)"
+        (uploadFiles)="attachReclamationPlan($event)"
         (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
         [allowMultiple]="true"
         [disabled]="!allowMiningUploads"
+        [showVirusError]="showReclamationPlanVirus"
       ></app-file-drag-drop>
     </div>
 
@@ -309,13 +312,14 @@
       <app-file-drag-drop
         id="noticeOfWork"
         [uploadedFiles]="noticeOfWork"
-        (uploadFiles)="attachFile($event, DOCUMENT.NOTICE_OF_WORK)"
+        (uploadFiles)="attachNoticeOfWork($event)"
         (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
         [disabled]="!requiresNoticeOfWork"
         [allowMultiple]="true"
+        [showVirusError]="showNoticeOfWorkVirus"
       ></app-file-drag-drop>
     </div>
   </div>
