--- a/portal-frontend/src/app/features/notifications/edit-submission/other-attachments/other-attachments.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/other-attachments/other-attachments.component.html
@@ -6,9 +6,9 @@
   </p>
 </div>
 <section>
-  <span class='subheading2'>Upload Optional Attachments (Max. 100 MB per attachment)</span>
+  <span class="subheading2">Upload Optional Attachments (Max. 100 MB per attachment)</span>
   <div class="uploader">
-    <app-file-drag-drop (uploadFiles)="attachFile($event, null)"></app-file-drag-drop>
+    <app-file-drag-drop (uploadFiles)="attachDocument($event)" [showVirusError]="showVirusError"></app-file-drag-drop>
   </div>
   <form [formGroup]="form">
     <div class="scrollable">
