--- a/portal-frontend/src/app/shared/owner-dialogs/owner-dialog/owner-dialog.component.html
+++ b/portal-frontend/src/app/shared/owner-dialogs/owner-dialog/owner-dialog.component.html
@@ -43,6 +43,7 @@
           id="fileUpload"
           [showErrors]="showFileErrors"
           [isRequired]="true"
+          [showVirusError]="showVirusError"
         ></app-file-drag-drop>
         <mat-form-field style="display: none">
           <input id="corporateSummary" matInput formControlName="corporateSummary" />
