--- a/portal-frontend/src/app/features/applications/edit-submission/proposal/tur-proposal/tur-proposal.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/proposal/tur-proposal/tur-proposal.component.html
@@ -34,8 +34,8 @@
     <div class="full-row">
       <label for="purpose">What is the purpose of the proposal?</label>
       <div class="subtext">
-        Include why you are applying for a Transportation, Utility and Recreational Trail, what the proposal will achieve, and any benefits to
-        agriculture that the proposal provides.
+        Include why you are applying for a Transportation, Utility and Recreational Trail, what the proposal will
+        achieve, and any benefits to agriculture that the proposal provides.
       </div>
       <mat-form-field appearance="outline">
         <textarea
@@ -102,9 +102,7 @@
     </div>
     <div class="full-row">
       <label for="negative-impact">Could this proposal be accommodated on lands outside of the ALR?</label>
-      <div class="subtext">
-        Please justify why the proposal cannot be carried out on lands outside the ALR.
-      </div>
+      <div class="subtext">Please justify why the proposal cannot be carried out on lands outside the ALR.</div>
       <mat-form-field appearance="outline">
         <textarea
           [formControl]="outsideLands"
@@ -170,11 +168,12 @@
     <app-file-drag-drop
       id="proof-of-serving"
       [uploadedFiles]="servingNotice"
-      (uploadFiles)="attachFile($event, DOCUMENT.SERVING_NOTICE)"
+      (uploadFiles)="attachServinceNotice($event)"
       (deleteFile)="onDeleteFile($event)"
       (openFile)="openFile($event)"
       [showErrors]="showErrors"
       [isRequired]="true"
+      [showVirusError]="showServingNoticeVirus"
     ></app-file-drag-drop>
   </div>
   <div class="section">
@@ -182,11 +181,12 @@
     <app-file-drag-drop
       id="proposal-map"
       [uploadedFiles]="proposalMap"
-      (uploadFiles)="attachFile($event, DOCUMENT.PROPOSAL_MAP)"
+      (uploadFiles)="attachProposalMap($event)"
       (deleteFile)="onDeleteFile($event)"
       (openFile)="openFile($event)"
       [showErrors]="showErrors"
       [isRequired]="true"
+      [showVirusError]="showProposalMapVirus"
     ></app-file-drag-drop>
   </div>
 </div>
