--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/other-attachments/other-attachments.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/other-attachments/other-attachments.component.html
@@ -8,9 +8,9 @@
   not include confidential material within your notice of intent.
 </p>
 <section>
-  <div class='subheading2'>Optional Attachments (Max. 100 MB per attachment)</div>
+  <div class="subheading2">Optional Attachments (Max. 100 MB per attachment)</div>
   <div class="uploader">
-    <app-file-drag-drop (uploadFiles)="attachFile($event, null)"></app-file-drag-drop>
+    <app-file-drag-drop (uploadFiles)="attachDocument($event)" [showVirusError]="showVirusError"></app-file-drag-drop>
   </div>
   <form [formGroup]="form">
     <div class="scrollable">
