--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/proposal/pfrs/pfrs-proposal.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/proposal/pfrs/pfrs-proposal.component.html
@@ -259,11 +259,12 @@
       <app-file-drag-drop
         id="proposal-map"
         [uploadedFiles]="proposalMap"
-        (uploadFiles)="attachFile($event, DOCUMENT.PROPOSAL_MAP)"
+        (uploadFiles)="attachProposalMap($event)"
         (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
+        [showVirusError]="showProposalMapVirus"
       ></app-file-drag-drop>
     </div>
 
@@ -336,13 +337,14 @@
       <app-file-drag-drop
         id="cross-section"
         [uploadedFiles]="crossSections"
-        (uploadFiles)="attachFile($event, DOCUMENT.CROSS_SECTIONS)"
+        (uploadFiles)="attachCrossSection($event)"
         (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
         [allowMultiple]="true"
         [disabled]="!allowMiningUploads"
+        [showVirusError]="showCrossSectionVirus"
       ></app-file-drag-drop>
     </div>
     <div class="full-row">
@@ -357,13 +359,14 @@
       <app-file-drag-drop
         id="reclamation-plan"
         [uploadedFiles]="reclamationPlan"
-        (uploadFiles)="attachFile($event, DOCUMENT.RECLAMATION_PLAN)"
+        (uploadFiles)="attachReclamationPlan($event)"
         (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
         [allowMultiple]="true"
         [disabled]="!allowMiningUploads"
+        [showVirusError]="showReclamationPlanVirus"
       ></app-file-drag-drop>
     </div>
 
@@ -407,13 +410,14 @@
       <app-file-drag-drop
         id="noticeOfWork"
         [uploadedFiles]="noticeOfWork"
-        (uploadFiles)="attachFile($event, DOCUMENT.NOTICE_OF_WORK)"
+        (uploadFiles)="attachNoticeOfWork($event)"
         (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
         [disabled]="!requiresNoticeOfWork"
         [allowMultiple]="true"
+        [showVirusError]="showNoticeOfWorkVirus"
       ></app-file-drag-drop>
     </div>
   </div>
