--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/proposal/pofo/pofo-proposal.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/proposal/pofo/pofo-proposal.component.html
@@ -203,11 +203,12 @@
       <app-file-drag-drop
         id="proposal-map"
         [uploadedFiles]="proposalMap"
-        (uploadFiles)="attachFile($event, DOCUMENT.PROPOSAL_MAP)"
+        (uploadFiles)="attachProposalMap($event)"
         (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
+        [showVirusError]="showProposalMapVirus"
       ></app-file-drag-drop>
     </div>
 
@@ -249,13 +250,14 @@
       <app-file-drag-drop
         id="cross-section"
         [uploadedFiles]="crossSections"
-        (uploadFiles)="attachFile($event, DOCUMENT.CROSS_SECTIONS)"
+        (uploadFiles)="attachCrossSection($event)"
         (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
         [allowMultiple]="true"
         [disabled]="!allowMiningUploads"
+        [showVirusError]="showCrossSectionVirus"
       ></app-file-drag-drop>
     </div>
     <div class="full-row">
@@ -270,13 +272,14 @@
       <app-file-drag-drop
         id="reclamation-plan"
         [uploadedFiles]="reclamationPlan"
-        (uploadFiles)="attachFile($event, DOCUMENT.RECLAMATION_PLAN)"
+        (uploadFiles)="attachReclamationPlan($event)"
         (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
         [isRequired]="true"
         [allowMultiple]="true"
         [disabled]="!allowMiningUploads"
+        [showVirusError]="showReclamationPlanVirus"
       ></app-file-drag-drop>
     </div>
   </div>
