--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
@@ -27,7 +27,7 @@
   *ngIf="!uploadedFiles.length || allowMultiple"
   [ngClass]="{
     'desktop-file-drag-drop': true,
-    'error-outline': isRequired && !disabled && showErrors && !uploadedFiles.length,
+    'error-outline': !disabled && ((isRequired && showErrors && !uploadedFiles.length) || showVirusError),
     disabled: disabled
   }"
   dragDropFile
@@ -52,6 +52,9 @@
 >
   Upload File
 </button>
-<app-validation-error *ngIf="isRequired && !disabled && showErrors && !uploadedFiles.length" errorClass="field-error"
-  >This file upload is required</app-validation-error
->
+<app-validation-error *ngIf="isRequired && !disabled && showErrors && !uploadedFiles.length" errorClass="field-error">
+  This file upload is required
+</app-validation-error>
+<app-validation-error *ngIf="!disabled && showVirusError" errorClass="field-error">
+  A virus was detected in the file. Choose another file and try again.
+</app-validation-error>
