--- a/portal-frontend/src/app/features/applications/alcs-edit-submission/alcs-edit-submission.component.html
+++ b/portal-frontend/src/app/features/applications/alcs-edit-submission/alcs-edit-submission.component.html
@@ -9,7 +9,7 @@
 <app-custom-stepper
   class="edit-application"
   #cdkStepper
-  (selectionChange)="onStepChange($event)"
+  (selectionChange)="onStepChange()"
   (beforeSwitchStep)="switchStep($event)"
 >
   <cdk-step label="Parcel Details">
