--- a/portal-frontend/src/app/features/applications/edit-submission/edit-submission.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/edit-submission.component.html
@@ -30,7 +30,7 @@
 <app-custom-stepper
   class="edit-application"
   #cdkStepper
-  (selectionChange)="onStepChange($event)"
+  (selectionChange)="onStepChange()"
   (beforeSwitchStep)="onBeforeSwitchStep($event)"
 >
   <cdk-step label="Parcel Details">
