--- a/alcs-frontend/src/app/features/board/dialogs/notice-of-intent/notice-of-intent-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/notice-of-intent/notice-of-intent-dialog.component.html
@@ -9,6 +9,7 @@
     <div class="left">
       <h3 class="card-title">
         <span class="margin-right">{{ cardTitle }}</span>
+        <app-application-legacy-id [legacyId]="noticeOfIntent.legacyId"></app-application-legacy-id>
         <app-application-type-pill [type]="noticeOfIntent.type"></app-application-type-pill>
         <app-application-type-pill
           *ngIf="noticeOfIntent.retroactive"
