Advanced Search Improvements
* Remove other parcels
* Use ng-select for all dropdowns
* Add X to file type selector and prevent input
* Add toast message and scrolling
* Sort nulls differently

--- a/alcs-frontend/src/app/features/search/application-search-table/application-search-table.component.html
+++ b/alcs-frontend/src/app/features/search/application-search-table/application-search-table.component.html
@@ -16,7 +16,7 @@
     </ng-container>
 
     <ng-container matColumnDef="dateSubmitted">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Date Submitted</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Date Submitted to ALC</th>
       <td mat-cell *matCellDef="let element">
         {{ element.dateSubmitted | date | emptyColumn }}
       </td>
