--- a/alcs-frontend/src/app/features/search/file-type-filter-drop-down/file-type-filter-drop-down.component.html
+++ b/alcs-frontend/src/app/features/search/file-type-filter-drop-down/file-type-filter-drop-down.component.html
@@ -1,11 +1,11 @@
-<mat-form-field appearance="outline" class="file-type-input">
+<mat-form-field appearance="outline"  class="file-type-input">
   <input
     value="{{ getSelectedItems() }}"
     placeholder="File Type"
     type="text"
     matInput
-    (input)="filterChanged($event)"
     [matAutocomplete]="auto"
+    onkeydown="return false;"
     [formControl]="componentTypeControl"
   />
   <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" class="tall-autocomplete">
@@ -16,7 +16,7 @@
         <mat-checkbox
           class="checklist-leaf-node"
           [checked]="checklistSelection.isSelected(node)"
-          (change)="todoLeafItemSelectionToggle(node)"
+          (change)="leafItemSelectionToggle(node)"
           >{{ node.item?.label ?? node.item }}</mat-checkbox
         >
       </mat-tree-node>
@@ -30,11 +30,12 @@
         <mat-checkbox
           [checked]="descendantsAllSelected(node)"
           [indeterminate]="descendantsPartiallySelected(node)"
-          (change)="todoItemSelectionToggle(node)"
+          (change)="itemSelectionToggle(node)"
         >
           {{ node.item?.label ?? node.item }}</mat-checkbox
         >
       </mat-tree-node>
     </mat-tree>
   </mat-autocomplete>
+  <button *ngIf="hasItemsSelected" class="clear-button" type="button" (click)="clear()">×</button>
 </mat-form-field>
