--- a/alcs-frontend/src/app/features/search/notice-of-intent-search-table/notice-of-intent-search-table.component.html
+++ b/alcs-frontend/src/app/features/search/notice-of-intent-search-table/notice-of-intent-search-table.component.html
@@ -16,7 +16,7 @@
     </ng-container>
 
     <ng-container matColumnDef="dateSubmitted">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Date Submitted</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Date Submitted to ALC</th>
       <td mat-cell *matCellDef="let element">
         {{ element.dateSubmitted | date | emptyColumn }}
       </td>
